<resources>
    <string name="app_name" translatable="false">Kwesi Commerce</string>
    <string name="channel_name" translatable="false">Messages</string>
    <string name="kwesi_shop" translatable="false">Kwesi\'s Shop</string>
    <string name="string_home">Home</string>
    <string name="string_shop">Shop</string>
    <string name="string_menu">Menu</string>
    <string name="string_account">Account</string>
    <string name="string_wishlist">Wishlist</string>
    <string name="string_back">Back</string>
    <string name="string_edit_profile">Edit Profile</string>
    <string name="string_add_to_cart">Add to Cart</string>
    <string name="string_remove_from_wishlist">Remove from Wishlist</string>
    <string name="string_login">Login</string>
    <string name="string_register">Register</string>
    <string name="string_login_to_your_account">Login to your Account</string>
    <string name="string_forgotten_your_password">Forgotten your Password?</string>
    <string name="string_email">Email Address</string>
    <string name="string_enter_your_email">Enter your email</string>
    <string name="string_password">Password</string>
    <string name="string_enter_your_password">Enter your Password</string>
    <string name="string_register_new_account">Register New Account</string>
    <string name="string_enter_password_again">Enter Password Again</string>
    <string name="string_enter_last_name">Enter last name</string>
    <string name="string_required_email">*Email</string>
    <string name="string_required_password">*Password</string>
    <string name="string_enter_first_name">Enter first name</string>
    <string name="string_required_first_name">*First name</string>
    <string name="string_required_last_name">*Last name</string>
    <string name="string_required_confirm_password">*Confirm Password</string>
    <string name="string_page_title" translatable="false">Page Title</string>
    <string name="increment_plus" translatable="false">+</string>
    <string name="decrement_minus" translatable="false">-</string>
    <string name="create_category">Create Category</string>
    <string name="category_name">Category Name</string>
    <string name="enter_category_name">Enter Category Name</string>
    <string name="product_name">Product Name</string>
    <string name="enter_product_name">Enter Product Name</string>
    <string name="description">Description</string>
    <string name="enter_description">Enter Description</string>
    <string name="categoryModel">Category</string>
    <string name="image">Image</string>
    <string name="upload_product_image">Upload Product Image</string>
    <string name="quantity">Quantity</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="price">Price</string>
    <string name="enter_price">Enter Price</string>
    <string name="list_price">List Price</string>
    <string name="enter_list_price">Enter List Price</string>
    <string name="retail_price">Retail Price</string>
    <string name="enter_retail_price">Enter Retail Price</string>
    <string name="create_product">Create Product</string>
    <string name="manage_category_message">Sorry, there\'s no categoryModel! Since you are an admin, you can add categories by clicking the plus button on the bottom right corner</string>
    <string name="manage_order_message">Sorry, no orderModels have been placed yet.</string>
    <string name="manage_product_message">Sorry, we currently have no productModel. Since you are an admin, you can add productModels by clicking the plus button on the bottom right corner</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="proceed_to_checkout">Proceed to Checkout</string>
    <string name="manage_cart_message">oh no! your cart is empty!</string>
    <string name="manage_category_user_message">Sorry, we currently have no categoryModel.! Please check back later.</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="required_address">Enter your Address</string>
    <string name="post_code">Post Code</string>
    <string name="card_number">Card Number</string>
    <string name="expire_date">Expire Date</string>
    <string name="cvv">CVV</string>
    <string name="view_order_summary">View Order Summary</string>
    <string name="required_full_name">*Full Name</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="enter_your_post_code">Enter your post code</string>
    <string name="hobbies_and_interests">Hobbies and Interests</string>
    <string name="enter_your_hobbies_and_interests">Enter your Hobbies and Interests</string>
    <string name="update_profile">Update Profile</string>
    <string name="welcome_to_kwesicommerce">Welcome to KwesiCommerce!</string>
    <string name="welcome_tag">The place for all flower and plant needs.</string>
    <string name="shop_now">SHOP NOW!</string>
    <string name="manage_category">Manage Category</string>
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="administrator_account">Administrator Account</string>
    <string name="manage_products">Manage Products</string>
    <string name="manage_users">Manage Users</string>
    <string name="manage_orders">Manage Orders</string>
    <string name="your_account">Your Account</string>
    <string name="contact_us">Contact Us</string>
    <string name="help_and_support">Help and Support</string>
    <string name="about_us">About Us</string>
    <string name="settings">Settings</string>
    <string name="previous_orders">Previous Orders</string>
    <string name="track_order">Track Order</string>
    <string name="switch_to_admin_account">Switch to Admin Account</string>
    <string name="switch_to_user_account">Switch to User Account</string>
    <string name="logout">Logout</string>
    <string name="order_confirmed">Order Confirmed!</string>
    <string name="your_goods_are_on_the_way">Your goods are on the way!</string>
    <string name="personal_details">Personal Details</string>
    <string name="payment_details">Payment Details</string>
    <string name="back_to_shopping">Back to Shopping</string>
    <string name="place_order">Place Order</string>
    <string name="user_previous_order">Sorry, you have no orderModels yet.</string>
    <string name="user_category_message">Sorry, we currently have no productModel for this categoryModel Please check back later.</string>
    <string name="user_wishlist_message">Sorry, you have no items in your wishlist.</string>
</resources>