<?xml version="1.0" encoding="utf-8"?><!-- fragment_auth_form.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/relLayoutLoginRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/custom_square_layout"
                android:fontFamily="@font/alegreya_sans_sc_light"
                android:padding="15dp"
                android:text="@string/string_login"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/custom_square_layout"
                android:fontFamily="@font/alegreya_sans_sc_light"
                android:padding="15dp"
                android:text="@string/string_register"
                android:textSize="30sp" />

        </LinearLayout>
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linLayRegisterForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:fontFamily="@font/alegreya_sans_sc"
                    android:padding="8dp"
                    android:text="@string/string_required_first_name"
                    android:textColor="@color/antiflash_white"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/edtTxtFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_edit_text_box"
                    android:fontFamily="@font/alegreya_sans"
                    android:hint="@string/string_enter_first_name"
                    android:inputType="textCapWords|textPersonName"
                    android:padding="15dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/faint_black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:fontFamily="@font/alegreya_sans_sc"
                    android:padding="8dp"
                    android:text="@string/string_required_last_name"
                    android:textColor="@color/antiflash_white"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/edtTxtLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_edit_text_box"
                    android:fontFamily="@font/alegreya_sans"
                    android:hint="@string/string_enter_last_name"
                    android:inputType="textCapWords|textPersonName"
                    android:padding="15dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/faint_black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:fontFamily="@font/alegreya_sans_sc"
                    android:padding="8dp"
                    android:text="@string/string_required_email"
                    android:textColor="@color/antiflash_white"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/edtTxtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_edit_text_box"
                    android:fontFamily="@font/alegreya_sans"
                    android:hint="@string/string_enter_your_email"
                    android:inputType="textEmailAddress"
                    android:padding="15dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/faint_black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:fontFamily="@font/alegreya_sans_sc"
                    android:padding="8dp"
                    android:text="@string/string_required_password"
                    android:textColor="@color/antiflash_white"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/edtTxtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_edit_text_box"
                    android:fontFamily="@font/alegreya_sans"
                    android:hint="@string/string_enter_your_password"
                    android:inputType="textPassword"
                    android:padding="15dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/faint_black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:fontFamily="@font/alegreya_sans_sc"
                    android:padding="8dp"
                    android:text="@string/string_required_confirm_password"
                    android:textColor="@color/antiflash_white"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/edtTxtConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_edit_text_box"
                    android:fontFamily="@font/alegreya_sans"
                    android:hint="@string/string_enter_password_again"
                    android:inputType="textPassword"
                    android:padding="15dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/faint_black"
                    android:textSize="20sp" />

            </LinearLayout>

            <Button
                android:id="@+id/btnAccountRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/custom_square_layout"
                android:fontFamily="@font/alegreya_sans_sc_medium"
                android:padding="15dp"
                android:text="@string/string_register_new_account"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linLayLoginForm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:fontFamily="@font/alegreya_sans_sc"
                android:padding="8dp"
                android:text="@string/string_email"
                android:textColor="@color/antiflash_white"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/edtTxtEmailLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_edit_text_box"
                android:fontFamily="@font/alegreya_sans"
                android:hint="@string/string_enter_your_email"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/faint_black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:fontFamily="@font/alegreya_sans_sc"
                android:padding="8dp"
                android:text="@string/string_password"
                android:textColor="@color/antiflash_white"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/edtTxtPasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_edit_text_box"
                android:fontFamily="@font/alegreya_sans"
                android:hint="@string/string_enter_your_password"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/faint_black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/alegreya_sans_sc_bold"
                android:padding="8dp"
                android:text="@string/string_forgotten_your_password"
                android:textColor="@color/antiflash_white"
                android:textSize="11sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnAccountLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_square_layout"
            android:fontFamily="@font/alegreya_sans_sc_medium"
            android:padding="15dp"
            android:text="@string/string_login_to_your_account"
            android:textSize="30sp" />

    </LinearLayout>

</LinearLayout>
