<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/antiflash_white"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.activities.HomeActivity">

    <include layout="@layout/layout_top_bar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPageImageSlider"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:background="@color/white" />

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/viewPageImageSlider"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/alegreya_sans_sc_bold"
            android:text="@string/welcome_to_kwesicommerce"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textViewDescription"
            android:layout_width="200dp"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewTitle"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/alegreya_sans_sc"
            android:gravity="center"
            android:text="@string/welcome_tag"
            android:textSize="15sp" />

        <Button
            android:id="@+id/buttonShopNow"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:layout_below="@id/textViewDescription"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:background="@drawable/custom_square_layout"
            android:fontFamily="@font/alegreya_sans_sc_light"
            android:text="@string/shop_now"
            android:textSize="30sp" />

    </RelativeLayout>

    <include layout="@layout/layout_bottom_navigation" />
</LinearLayout>